--- a/css/style.css
+++ b/css/style.css
@@ -676,6 +676,10 @@ body::-webkit-scrollbar {
   height: 70px;
 }
 
+.blog-slider {
+  overflow: hidden;
+}
+
 .section-title-blog {
   font-size: 3.7rem;
   line-height: 120%;
@@ -880,6 +884,135 @@ body::-webkit-scrollbar {
   line-height: 160%;
 }
 
+.footer-top {
+  padding-top: 3.125rem;
+  padding-bottom: 3.125rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-logo {
+  width: 12.5rem;
+  height: 3.9rem;
+}
+
+.footer-info {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  gap: 14px;
+  font-style: normal;
+  color: #292d33;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 160%;
+  margin-left: 3.5rem;
+}
+
+.footer-info-adress,
+.footer-info-email {
+  font-style: inherit;
+  text-decoration: inherit;
+  color: inherit;
+}
+
+.footer-phone {
+  font-style: normal;
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 160%;
+  text-decoration-line: underline;
+  color: #292d33;
+  margin-left: auto;
+  margin-right: 2rem;
+}
+.footer-social {
+  margin-left: 4rem;
+}
+
+.footer-social-link {
+  text-decoration: none;
+  margin-left: 0.65rem;
+}
+
+.footer-separator {
+  background-color: #ebebf0;
+  color: #ebebf0;
+}
+.footer-bottom {
+  padding-top: 3.125rem;
+  padding-bottom: 3.125rem;
+  display: flex;
+}
+
+.footer-menu-title {
+  margin-top: 0;
+  margin-bottom: 1.875rem;
+  color: rgb(41, 45, 51);
+  font-size: 16px;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.footer-menu-list {
+  margin: 0;
+  padding-left: 1.25rem;
+  list-style: none;
+}
+
+.footer-menu-column-2 {
+  columns: 20rem auto;
+  min-width: 50rem;
+}
+
+.footer-menu-link {
+  text-decoration: none;
+  color: #828a99;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 160%;
+  margin-bottom: 0.9375rem;
+  display: block;
+}
+
+.footer-menu-link-bold {
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 160%;
+  font-style: normal;
+  color: #292d33;
+  margin-bottom: 30px;
+}
+
+.footer-menu-wrapper:last-child {
+  margin-left: 5rem;
+}
+
+.footer-wrapper {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  color: rgb(130, 138, 153);
+  font-style: normal;
+}
+
+.footer-copyright,
+.footer-policy {
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 160%;
+  font-style: normal;
+  color: inherit;
+}
+.footer-wrapper,
+.footer-legal {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 70px;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 14px;
@@ -995,6 +1128,60 @@ body::-webkit-scrollbar {
     font-size: 2.8rem;
     line-height: 125%;
     margin-bottom: 3.5rem;
+  }
+
+  .footer-top {
+    padding-bottom: 1.6rem;
+  }
+
+  .footer-logo {
+    width: 160px;
+    height: 59px;
+    margin-top: 0.7rem;
+    margin-bottom: 27px;
+  }
+
+  .footer-info {
+    margin-left: 0.5rem;
+  }
+
+  .footer-phone {
+    font-size: 2.3rem;
+    margin-left: 0;
+    margin-right: 0;
+    letter-spacing: 0.2px;
+    margin-bottom: 2rem;
+  }
+  .footer-info {
+    margin-bottom: 10px;
+    font-size: 1.18rem;
+  }
+  .footer-social {
+    margin-left: -7px;
+    margin-top: 10px;
+  }
+
+  .footer-bottom {
+    padding-top: 2rem;
+  }
+
+  .footer-menu-title {
+    font-size: 1.22rem;
+    margin-bottom: 2.1rem;
+  }
+
+  .footer-menu-list {
+    padding-left: 1.65rem;
+  }
+
+  .footer-menu-link {
+    font-size: 1.2rem;
+    margin-bottom: 0.7375rem;
+  }
+
+  .footer-menu-column-2 {
+    columns: auto;
+    min-width: 50rem;
   }
 }
 
@@ -1352,8 +1539,6 @@ body::-webkit-scrollbar {
     margin-top: 0.1rem;
     font-size: 1.19rem;
   }
-  .section-blog {
-  }
 
   .section-cta {
     margin-top: -3rem;
@@ -1472,5 +1657,10 @@ body::-webkit-scrollbar {
   .notify-text {
     font-size: 1.03rem;
     line-height: 150%;
+  }
+
+  .footer-top {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
