--- a/css/style.css
+++ b/css/style.css
@@ -811,6 +811,11 @@ body::-webkit-scrollbar {
   display: flex;
   gap: 1.875rem;
 }
+.input-group-vertical {
+  display: flex;
+  flex-direction: column;
+}
+
 .input-group {
   position: relative;
   height: 66px;
@@ -826,7 +831,7 @@ body::-webkit-scrollbar {
   left: 0;
   padding: 1.25rem 1.875rem;
   border: 1px solid #e4e4eb;
-  background-color: transparent;
+  background-color: inherit;
   outline: none;
 }
 .input-group-label {
@@ -1033,6 +1038,91 @@ body::-webkit-scrollbar {
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+.modal {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateX(-100%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(41, 45, 51, 0.5);
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal.is-open {
+  transform: translateX(0);
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal.is-open .modal-dialog {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.modal-dialog {
+  background-color: #fff;
+  margin: auto;
+  max-width: 28.75rem;
+  padding: 2.3rem 3.225rem;
+  position: relative;
+  transform: translateY(-20%);
+  opacity: 0;
+  transition: transform 0.3s, opasity 0.3s;
+}
+
+.modal-close {
+  display: block;
+  position: absolute;
+  top: 40px;
+  right: 50px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ebebf0;
+}
+
+.modal-title {
+  color: rgb(41, 45, 51);
+  font-family: Bebas Neue;
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 120%;
+  font-style: normal;
+  margin-top: 0;
+  margin-bottom: 1.65rem;
+}
+
+.modal-text {
+  color: rgb(130, 138, 153);
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 160%;
+  font-style: normal;
+  margin-bottom: 30px;
+}
+.modal-input-group {
+  background-color: #fff;
+}
+
+.modal-form-footer {
+  padding-top: 30px;
+}
+.modal-form-button {
+  margin-bottom: 1.75rem;
+  width: 100%;
+  display: block;
+  font-size: 0.9rem;
+  padding: 1.2rem 3.75rem;
 }
 
 @media (max-width: 1700px) {
@@ -1722,6 +1812,7 @@ body::-webkit-scrollbar {
   .input-group-wrapper {
     flex-direction: column;
   }
+
   .input-group {
     height: 60px;
   }
