--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,10 @@ body::-webkit-scrollbar {
   position: relative;
 }
 
+.header-features-bl {
+  color: #292d33;
+}
+
 .features-icon {
   width: 2.25rem;
   height: 2.25rem;
@@ -283,10 +287,18 @@ body::-webkit-scrollbar {
   width: 18rem;
 }
 
+.header-features-item-bl {
+  border: 1px solid rgb(235, 235, 240);
+  /* sep */
+}
+
 .swiper {
   height: 268px;
 }
 
+.swiper-bl {
+  height: auto;
+}
 .slider-buttons {
   /* display: none; */
   height: 44px;
@@ -302,6 +314,19 @@ body::-webkit-scrollbar {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+
+.slider-button-bl {
+  border: 1px solid rgb(235, 235, 240);
+  display: none;
+}
+
+.button-arrow-wh {
+  fill: #fff;
+}
+
+.button-arrow-bl {
+  fill: #292d33;
 }
 
 .header-features-text {
@@ -595,11 +620,68 @@ body::-webkit-scrollbar {
 
 .founder-photo {
   position: absolute;
-  left: 0;
+
   top: 0;
   width: 43.7%;
   height: 100%;
   object-fit: cover;
+}
+
+.founder-photo-left {
+  left: 0;
+}
+
+.founder-photo-right {
+  right: 0;
+}
+
+.our_production-content-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-column-gap: 7.5rem;
+  /* grid-template-areas:
+    "op_title op_img"
+    "op_content op_img "; */
+}
+
+.grid_right_img {
+  grid-template-areas:
+    "op_title op_img"
+    "op_content op_img ";
+}
+
+.grid_left_img {
+  grid-template-areas:
+    "op_img op_title "
+    "op_img op_content";
+}
+
+.our_production-img {
+  grid-area: op_img;
+}
+
+.our_production-photo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.our_production-title {
+  grid-area: op_title;
+  margin-bottom: 20px;
+}
+
+.our_production-content {
+  margin-top: 30px;
+  grid-area: op_content;
+}
+
+.our_production-list {
+  margin-top: 30px;
+  list-style: none;
+  padding: 0;
+  columns: 2 auto;
 }
 
 .founder-content {
@@ -611,16 +693,32 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-.founder-content-wrapper {
+.our_production {
+  margin-top: 8.125rem;
+}
+
+.founder-content-wrapper,
+.our_production-wrapper {
   display: flex;
+}
+
+.f-c-w-right {
   justify-content: flex-end;
 }
 
-.section-title-founder {
+.f-c-w-left {
+  justify-content: flex-start;
+}
+
+.section-title-founder,
+.section-title-our_production {
   margin-bottom: 1.64rem;
 }
 
-.founder-text {
+.founder-text,
+.our_production-text,
+.about-main-text,
+.about-seo-text {
   color: rgb(130, 138, 153);
   font-size: 1rem;
   font-weight: 500;
@@ -693,11 +791,19 @@ body::-webkit-scrollbar {
   overflow: hidden;
 }
 
+.blog-slider_visible {
+  overflow: visible;
+}
+
 .section-title-blog {
   font-size: 3.7rem;
   line-height: 120%;
   letter-spacing: 0.7px;
   margin-bottom: 3.5rem;
+}
+
+.blog-text {
+  columns: 2 auto;
 }
 
 .blog-card {
@@ -730,6 +836,10 @@ body::-webkit-scrollbar {
   height: 100%;
   object-fit: cover;
   z-index: -2;
+}
+
+.blog-card-image-zi0 {
+  z-index: 0;
 }
 
 .blog-card-title {
@@ -1214,11 +1324,16 @@ ul.breadcrumb_light li a:hover {
   margin-bottom: 2rem;
 }
 
-.pr-autohim-title-image {
+.autohim-title-image {
   position: absolute;
   bottom: 0;
   right: 15rem;
   height: 15rem;
+  display: block;
+}
+
+.autohim-title-image-hidden {
+  display: none;
 }
 
 .blog-image {
@@ -1280,6 +1395,98 @@ ul.breadcrumb_dark li + li:before {
   margin-bottom: 1.875rem;
 }
 
+.about-main-content-wrapper {
+  display: flex;
+  gap: 7.5rem;
+}
+
+.section-slider {
+  margin-bottom: 8.125rem;
+}
+
+.about-main {
+  margin-bottom: 6.25rem;
+}
+
+.about-main-img {
+  width: 30rem;
+  height: 30rem;
+  flex-shrink: 0;
+}
+
+.about-main-photo {
+  width: 100%;
+  height: 100%;
+}
+
+.about-seo {
+  margin-top: 6.25rem;
+  margin-bottom: 9.375rem;
+}
+
+.about-seo-title {
+  color: rgb(41, 45, 51);
+  font-family: Noto Sans;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 160%;
+}
+
+.about-seo-link {
+  gap: 0.9375rem;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: rgb(92, 142, 230);
+  font-family: Noto Sans;
+  font-size: 1rem;
+  font-weight: 620;
+  line-height: 160%;
+}
+
+.production {
+  margin: 6.25rem 0;
+}
+
+.svg-list-icon-container {
+  width: 30px;
+  height: 30px;
+}
+
+.client-list-icon2 {
+  width: 100%;
+  height: 100%;
+}
+
+/* .link-display-off {
+  display: none;
+} */
+
+.autohim-kinds-item::before {
+  content: "";
+  width: 1rem;
+  height: 2px;
+  /* main */
+  background: #5c8ee6;
+  /* margin-right: 1.25rem; */
+  transition: width 0.2s;
+}
+
+.autohim-kinds-list {
+  margin-top: 1.875rem;
+  list-style: none;
+  padding: 0;
+  columns: 4 auto;
+}
+
+.blog-text {
+  margin-bottom: 50px;
+}
+
+.premium-autohim-section {
+  background-color: #F0F2F5;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 14px;
@@ -1287,6 +1494,19 @@ ul.breadcrumb_dark li + li:before {
   .header-image {
     background-position: center;
   }
+}
+
+.download-katalog-button {
+  display: flex;
+align-items: center;
+gap: .625rem;
+padding: .625rem 4rem;
+margin-top: 3.125rem;
+margin-bottom: 6.25rem;
+}
+
+.premium-autohim-photo{
+  object-fit: fill;
 }
 
 @media (max-width: 1460px) {
@@ -1474,11 +1694,30 @@ ul.breadcrumb_dark li + li:before {
   .footer-phone {
     margin-right: 200px;
   }
-  .pr-autohim-title-image {
+  .autohim-title-image {
     position: absolute;
     bottom: 0;
     right: 0;
     height: 10rem;
+  }
+  .our_production-content-wrapper {
+    grid-column-gap: 3.5rem;
+  }
+  .slider-button-bl {
+    display: flex;
+  }
+
+  .about-main-content-wrapper {
+    gap: 3.5rem;
+  }
+
+  .about-main-img {
+    width: 23.4375rem;
+    height: 23.4375rem;
+    flex-shrink: 0;
+  }
+  .autohim-kinds-list {
+    columns: 2 auto;
   }
 }
 
@@ -1698,7 +1937,8 @@ ul.breadcrumb_dark li + li:before {
     grid-column-gap: 1.875rem;
   }
 
-  .founder-photo {
+  .founder-photo,
+  .our_production-photo {
     position: relative;
     width: 100%;
     margin-bottom: 0.8rem;
@@ -1759,8 +1999,58 @@ ul.breadcrumb_dark li + li:before {
     width: 100%;
   }
 
-  .pr-autohim-title-image {
+  .autohim-title-image {
     display: none;
+  }
+  .blog-text {
+    columns: 1 auto;
+  }
+
+  .our_production-content-wrapper,
+  .founder {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-column-gap: 0;
+  }
+
+  .founder-photo {
+    grid-area: op_img;
+  }
+
+  .founder-content-wrapper {
+    grid-area: op_content;
+  }
+
+  .tit_img_txt {
+    grid-template-areas:
+      "op_title"
+      "op_img"
+      "op_content";
+  }
+
+  .img_tit_txt {
+    grid-template-areas:
+      "op_img"
+      "op_title"
+      "op_content";
+  }
+
+  .tit_txt_img {
+    grid-template-areas:
+      "op_title"
+      "op_content"
+      "op_img";
+  }
+
+  .about-main-content-wrapper {
+    flex-direction: column;
+  }
+
+  .about-main-img {
+    align-self: center;
+  }
+  .download-katalog-button {   
+  margin-bottom: 0;
   }
 }
 
@@ -1836,7 +2126,8 @@ ul.breadcrumb_dark li + li:before {
     margin-bottom: 3rem;
   }
 
-  .section-title-founder {
+  .section-title-founder,
+  .section-title-our_production {
     margin-bottom: 1.2rem;
   }
 
@@ -1844,7 +2135,10 @@ ul.breadcrumb_dark li + li:before {
     margin-bottom: 3.5rem;
   }
 
-  .founder-text {
+  .founder-text,
+  .our_production-text,
+  .about-main-text,
+  .about-seo-text {
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 150%;
@@ -1946,7 +2240,8 @@ ul.breadcrumb_dark li + li:before {
     letter-spacing: 0.5px;
   }
 
-  .clients-list {
+  .clients-list,
+  .our_production-list {
     columns: 1;
   }
 
@@ -2023,4 +2318,17 @@ ul.breadcrumb_dark li + li:before {
     flex-direction: column;
     align-items: flex-start;
   }
+
+  .production {
+    margin-bottom: 6.25rem;
+  }
+
+  .about-seo {
+    margin-top: 3.125rem;
+    margin-bottom: 6.25rem;
+  }
+  .autohim-kinds-list {
+    columns: 1 auto;
+  }
+}
 }
