--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+
+@import url("normalize.css");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("swiper-bundle.min.css");
+
 * {
   box-sizing: border-box;
 }
@@ -10,6 +15,7 @@ html {
   font-family: "Bebas Neue Book";
   src: url("../fonts/BebasNeueBook.woff") format("woff");
   font-weight: normal;
+  font-display: swap;
   font-style: normal;
 }
 
@@ -18,6 +24,7 @@ html {
   src: url("../fonts/BebasNeueRegular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -25,6 +32,7 @@ html {
   src: url("../fonts/BebasNeueBold.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
@@ -99,8 +107,11 @@ body::-webkit-scrollbar {
   padding-top: 5.875rem;
 }
 
-.header-image {
+.no-webp .header-image {
   background-image: url("../img/header-bg.png");
+}
+.header-image {
+  background-image: url("../img/header-bg.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -1508,6 +1519,7 @@ margin-bottom: 6.25rem;
 .premium-autohim-photo{
   object-fit: fill;
 }
+
 
 @media (max-width: 1460px) {
   html {
